Last update for presenting

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -56,11 +56,11 @@
   </div>
 </nav>
 
-<main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
+<main class="mt-5 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
   <div class="sm:text-center lg:text-left">
     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-      <span class="block xl:inline">EverlyTest</span><br>
-      <span class="block text-indigo-600 xl:inline">La plataforma que te ayuda a filtrar a los candidatos previa a la entrevista</span>
+      <span class="block  text-center">EverlyTest</span><br>
+      <span class="block text-indigo-600 xl:inline text-s">La plataforma que te ayuda a filtrar a los candidatos previa a la entrevista</span>
     </h1>
     <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
       Te ayudamos a captar el mejor talento para la posición que requieres cubrir mediante pre-evaluaciones hechas a la medida.
@@ -72,14 +72,10 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div class="py-12 bg-white">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="lg:text-center">
-      <h2 class="text-base text-indigo-600 font-semibold tracking-wide uppercase">Transactions</h2>
+    <div class="lg:text-left">
+      <h2 class="text-base text-indigo-600 font-semibold tracking-wide uppercase">Beneficios</h2>
       <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-        A better way to send money
-      </p>
-      <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
-        Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam voluptatum cupiditate veritatis in
-        accusamus quisquam.
+        La mejor herramienta para eficientar los procesos de reclutamiento
       </p>
     </div>
 
@@ -98,11 +94,10 @@
           </div>
           <div class="ml-4">
             <dt class="text-lg leading-6 font-medium text-gray-900">
-              Competitive exchange rates
+              Ampliar las solicitudes de CV
             </dt>
             <dd class="mt-2 text-base text-gray-500">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste
-              dolor cupiditate blanditiis ratione.
+              Al ser una plataforma remota con controles de autenticación rigurosos puedes ampliar tu búsqueda de candidatos. 
             </dd>
           </div>
         </div>
@@ -120,11 +115,10 @@
           </div>
           <div class="ml-4">
             <dt class="text-lg leading-6 font-medium text-gray-900">
-              No hidden fees
+              Sin prejuicios
             </dt>
             <dd class="mt-2 text-base text-gray-500">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste
-              dolor cupiditate blanditiis ratione.
+              Ayudamos a proveer información de los candidatos mediante puntajes para reducir los prejucios al momento de escoger al candidato
             </dd>
           </div>
         </div>
@@ -141,11 +135,10 @@
           </div>
           <div class="ml-4">
             <dt class="text-lg leading-6 font-medium text-gray-900">
-              Transfers are instant
+              Reducir tiempos de reclutamiento
             </dt>
             <dd class="mt-2 text-base text-gray-500">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste
-              dolor cupiditate blanditiis ratione.
+              Al hacer pre evaluaciones a la medida del perfil, ayudamos a los reclutadores a filtrar la bolsa de candidatos de una manera más eficiente
             </dd>
           </div>
         </div>
@@ -163,11 +156,10 @@
           </div>
           <div class="ml-4">
             <dt class="text-lg leading-6 font-medium text-gray-900">
-              Mobile notifications
+              Retroalimentación al instante
             </dt>
             <dd class="mt-2 text-base text-gray-500">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste
-              dolor cupiditate blanditiis ratione.
+              Podrás saber el desempeño de cada candidato y darle seguimiento a cada uno de ellos.
             </dd>
           </div>
         </div>
