--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,7 @@
   {{{body}}}
 
 
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   <script src="/javascripts/script.js"></script>
 </body>
 
